chore(gitpod): add extensions into the gitpod.yml
closes #3

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,10 @@
+
 ports:
   - port: 3000
 tasks:
   - init: yarn install
     command: yarn start
+vscode:
+  extensions:
+    - PKief.material-icon-theme
+    - dbaeumer.vscode-eslint
