--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
     "root": true,
     "extends": [
+        "react-app",
+        "react-app/jest",
         "airbnb",
         "airbnb-typescript",
         "airbnb/hooks"
