--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {},
+    "rules": {
+      "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
+    },
     "ignorePatterns": ["src/**/*.test.ts"]
 }
