--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,13 @@
     "rules": {
       "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
     },
-    "ignorePatterns": ["src/**/*.test.ts"]
+    "overrides": [
+      {
+        "files": ["**/*.spec.ts", "**/*.spec.tsx"],
+        "rules": {
+          "object-curly-newline": ["error", { "minProperties": 4 }]
+        }
+      }
+    ],
+    "ignorePatterns": ["src/**/*.spec.ts"]
 }
